# dipworkpy

./: README.md  index.md
DIPWORK.207/: DIP_WORK-converted.docx
DIPWORK.207/SOURCE/: .gitignore
docs/: _config.yml  index.md  pumltest.md  style.css
docs/dippy-atari/: dippy-a1900-1.md  dippy-a1901f.md  dippy-a1901h.md  dippy-a1901w.md  dippy-a1902.md  dippy-a1903f.md  dippy-a1903h.md  dippy-a1904f.md  dippy-a1904h.md  dippy-a1905f.md  dippy-a1905h.md  dippy-a1906f.md  dippy-a1906h.md  dippy-a1907f.md  dippy-a1907h.md  dippy-a1908f.md  dippy-a1908h.md  dippy-a1909f.md  dippy-a1909h.md  dippy-abb.md  (+4 more)
project/: COPYING  README.md  README.rst  main.py  pyproject.toml
project/dipworkpy/: __init__.py  conflict_game.py  graphs.py  impl_resolve.py  model.py
project/dipworkpy/cfl_resolve/: __init__.py  cfl_k1.py  cfl_model.py
project/dipworkpy/dip_eval/: README.md  __init__.py  eval_common.py  eval_k0.py  eval_k1.py  eval_k2.py  eval_k3.py  eval_k4.py  eval_model.py
project/doc/: DIP_WORK-converted.docx
project/playground/: test_scenarios_bnf.py
project/tests/: __init__.py  conftest.py  test_all.py  test_app.py  test_conflict_datc.py  test_conflict_game.py  test_conflict_game_parser.py  test_conflict_game_t_field_from_order.py  test_conflict_game_writer.py  test_convoy_route_valid_fixed.py  test_eval_k1_parse_edges.py  test_eval_model.py  test_graphs.py  test_model.py  test_scenarios_docs.py  test_testdata.py  testdata.json
src/: graphs.py  impl_resolve.py  main.py  model.py  test_check.py  test_convoy_route_valid_fixed.py  test_graphs.py  test_model.py
(+3 files in other folders)
