[tool.poetry]
name = "DipworkPy"
version = "0.1.0"
description = "Diplomacy Board Game Framework"
authors = ["towi <towi@geocities.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
lrparsing = "^1.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
